<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/p_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edt_border"
            android:hint="@string/p_name"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="@dimen/rd_textSize" />

        <EditText
            android:id="@+id/p_contact"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edt_border"
            android:hint="@string/p_contact"
            android:inputType="number"
            android:maxLength="10"
            android:paddingLeft="10dp"
            android:textSize="@dimen/rd_textSize" />

        <EditText
            android:id="@+id/p_emailid"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edt_border"
            android:hint="@string/p_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textSize="@dimen/rd_textSize" />

        <EditText
            android:id="@+id/p_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edt_border"
            android:hint="@string/p_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textSize="@dimen/rd_textSize" />

        <EditText
            android:id="@+id/p_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edt_border"
            android:hint="@string/p_confirm_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textSize="@dimen/rd_textSize"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/purpose_spinnerButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="7"
            android:paddingRight="10dp"
            android:text="Please Select Purpose"
            android:textAllCaps="false"
            android:background="@drawable/border"
            android:textSize="@dimen/textSize"
            android:drawableRight="@drawable/down_arrow"/>


        <Button
            android:id="@+id/signup_submitButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_border"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

    </LinearLayout>


</LinearLayout>