<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical"
    tools:context=".activity.BecomeRoomMateActivity">
    <include layout="@layout/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="75dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/jillu" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="@dimen/rd_textSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_becomeName"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="7"
            android:background="@drawable/edt_border"
            android:inputType="text"
            android:textSize="@dimen/rd_textSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/age"
            android:textColor="#000000"
            android:textSize="@dimen/rd_textSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_becomeAge"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="7"
            android:background="@drawable/edt_border"
            android:inputType="number"
            android:maxLength="2"
            android:paddingLeft="10dp"
            android:textSize="@dimen/rd_textSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/budget"
            android:textColor="#000000"
            android:textSize="@dimen/rd_textSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_becomeBudget"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="7"
            android:background="@drawable/edt_border"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:paddingLeft="10dp"
            android:textSize="@dimen/rd_textSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/mobile_no"
            android:textColor="#000000"
            android:textSize="@dimen/rd_textSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_becomeContact"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="7"
            android:background="@drawable/edt_border"
            android:inputType="number"
            android:maxLength="10"
            android:paddingLeft="10dp"
            android:textSize="@dimen/rd_textSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/address"
            android:textColor="#000000"
            android:textSize="@dimen/rd_textSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_becomeAddress"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="7"
            android:background="@drawable/edt_border"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="@dimen/rd_textSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="start"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:text="@string/gender"
            android:textColor="#000000"
            android:textSize="@dimen/rd_textSize"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/become_radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="horizontal"
            android:weightSum="7">

            <RadioButton

                android:id="@+id/become_radioMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:checked="false"
                android:text="@string/male"
                android:textSize="@dimen/rd_textSize" />

            <RadioButton
                android:id="@+id/become_radioFeMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3.5"
                android:checked="false"
                android:text="@string/female"
                android:textSize="@dimen/rd_textSize" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/become_submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_border"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="Submit"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

</LinearLayout>